[package]
name = "minechat-protocol"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/walker84837/minechat-protocol"
description = "The MineChat protocol, enabling you chat with people over on Minecraft"
authors = ["walker84837"]
readme = "README.md"
rust-version = "1.85.0"
keywords = ["networking", "async", "authentication", "chat", "protocol"]
categories = ["network-programming", "asynchronous", "authentication"]

[dependencies]
async-trait = "0.1.81"
kyori-component-json = "0.2.1"
log = "0.4.26"
miette = "7.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-std", "io-util", "net", "signal", "macros", "rt-multi-thread"], optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
x509-parser = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }
uuid = { version = "1.15.1", features = ["v4"] }
zstd = "0.13.2"

[features]
default = []
tokio = ["dep:tokio"]
tls-native = ["tokio", "dep:tokio-native-tls", "dep:native-tls"]
tls-rustls = ["tokio", "dep:rustls", "dep:tokio-rustls", "dep:x509-parser", "dep:base64"]
cert-pinning = ["tls-rustls"]

[dev-dependencies]
hex = "0.4"
